--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,9 @@ button::-moz-focus-inner {
   font-family: "Poppins", sans-serif;
 }
 
-body {
+/* body {
   background: #E3F2FD;
-}
+} */
 
 .chatbot-toggler {
   position: fixed;
