--- a/css/stylex.css
+++ b/css/stylex.css
@@ -308,23 +308,24 @@ button {
     top: 0;
     left: 0;
     /* background-color: rgb(0,0,0); */
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 1);
     overflow-x: hidden;
     transition: 0.5s;
 }
 
-.overlay .closebtn {
+/* .overlay .closebtn {
     position: absolute;
     top: 20px;
     right: 45px;
     font-size: 60px;
-}
+} */
 .overlay a {
-    padding-left: 22px;
+    padding: 22px 0px 42px 15px;
     text-decoration: none;
     font-size: 15px;
     font-weight: bold;
     color: #7e7e7e;
+    height: 2.7em;
     display: block;
     transition: 0.3s;
     /* margin-left: 30px; */
@@ -342,10 +343,10 @@ button {
 
 .overlay-content {
     position: relative;
-    top: 10%;
+    top: 2%;
     width: 100%;
     text-align: left;
-    margin-top: 30px;
+    margin-top: 10px;
     
 }
 .toggle_menu {
